--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "commander": "~1.1.1",
     "node-static": "~0.6.7",
     "moment": "~2.0.0",
-    "string": "~1.2.1"
+    "string": "~1.2.1",
+    "jade": "~0.28.2"
   }
 }
